redirect to wordpress site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,7 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <script>
+    window.location.href = "https://foragingformore.wordpress.com/"
+  </script>
 </head>
