--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -17,8 +17,8 @@ $background-color: #fdfdfd !default;
 $brand-color: #2a7ae2 !default;
 $brand-color-inverse: #fdfdfd !default;
 
-$primary-color: #7b4e6a;
-$tertiary-color: #7b4e6a96;
+$primary-color: #244d20;
+$tertiary-color: #244d205e;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
