--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,6 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
   <script>
-    window.location.href = "https://foragingformore.wordpress.com/"
+    window.location.href = "https://foragingformore.substack.com/"
   </script>
 </head>
